--- a/WebResumen/Views/AutoClaveB/Login.cshtml
+++ b/WebResumen/Views/AutoClaveB/Login.cshtml
@@ -28,7 +28,8 @@
                     <span asp-validation-for="Contraseña" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Comentario"></label>
+                    @*<label asp-for="Comentario"></label>*@
+                    <label>Motivo de la Reimpresión</label>
                     <input asp-for="Comentario" class="form-control" />
                     <span asp-validation-for="Comentario" class="text-danger"></span>
                 </div>
