--- a/WebResumen/Views/AutoClaveA/Index.cshtml
+++ b/WebResumen/Views/AutoClaveA/Index.cshtml
@@ -14,7 +14,7 @@
         <span class="sr-only">Loading...</span>
     </div>
 
-    <div class="alert alert-warning alert-dismissable" role="alert" ng-if="send"
+    @*<div class="alert alert-warning alert-dismissable" role="alert" ng-if="send"
          dismiss-on-timeout="1000">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         El archivo ha sido enviado a la impresora!
@@ -22,7 +22,7 @@
     <div class="alert alert-success alert-dismissable" role="alert" ng-if="received">
         <button type="button" dismiss-on-timeout='1000' class="close" data-dismiss="alert">&times;</button>
         El archivo ha sido impreso!
-    </div>
+    </div>*@
 
   
 
