--- a/WebResumen/Views/AutoClaveA/Print.cshtml
+++ b/WebResumen/Views/AutoClaveA/Print.cshtml
@@ -11,7 +11,7 @@
 <body ng-app="my-autoclaves" ng-controller="autoclave-controller">
     @*<div class="spinner-border text-primary" role="status" ng-show="loading">
         <span class="sr-only">Loading...</span>
-    </div>*@
+    </div>
 
     <div class="alert alert-warning alert-dismissable" role="alert" ng-if="send"
          dismiss-on-timeout="1000">
@@ -22,11 +22,11 @@
     <div class="alert alert-success alert-dismissable" role="alert" ng-if="received">
         <button type="button" dismiss-on-timeout='1000' class="close" data-dismiss="alert">&times;</button>
         El archivo ha sido impreso!
-    </div>
+    </div>*@
 
     @using Microsoft.AspNetCore.Http
         @inject IHttpContextAccessor httpContextAccessor
-    <h1>@httpContextAccessor.HttpContext.Session.GetString("SessionDatosA")</h1>
+    @*<h1>@httpContextAccessor.HttpContext.Session.GetString("SessionDatosA")</h1>*@
       
 
 
