--- a/WebResumen/Views/AutoClaveB/Print.cshtml
+++ b/WebResumen/Views/AutoClaveB/Print.cshtml
@@ -5,7 +5,7 @@
 }
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutInicio.cshtml";
 }
 
 
@@ -13,7 +13,7 @@
 
     @using Microsoft.AspNetCore.Http
     @inject IHttpContextAccessor httpContextAccessor
-    <h1>@httpContextAccessor.HttpContext.Session.GetString("SessionDatosB")</h1>
+    @*<h1>@httpContextAccessor.HttpContext.Session.GetString("SessionDatosB")</h1>*@
 
 
     <a type="button" class="btn btn-info" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosB")">Imprimir</a>
