--- a/WebResumen/Views/MaestroAutoclaveSup/Edit.cshtml
+++ b/WebResumen/Views/MaestroAutoclaveSup/Edit.cshtml
@@ -3,7 +3,8 @@
 @{
     ViewData["Title"] = "Editar";
 }
-
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor httpContextAccessor
 <h1>Editar</h1>
 
 <h4>Control Estado</h4>
@@ -16,38 +17,38 @@
             <div class="form-group">
                 @*<label asp-for="Matricula" class="control-label"></label>*@
                 @Html.DisplayFor(model => model.Matricula, new { @readonly = true })
-                <input asp-for="Matricula" class="form-control" type="hidden" />
+                <input asp-for="Matricula" class="form-control" type="hidden" value="@httpContextAccessor.HttpContext.Session.GetString("SessionMatriculaMS")" />
                 @*<span asp-validation-for="Matricula" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 @*<label asp-for="Nombre" class="control-label"></label>*@
-                <input asp-for="Nombre" class="form-control" type="hidden" />
+                <input asp-for="Nombre" class="form-control" type="hidden"value="@httpContextAccessor.HttpContext.Session.GetString("SessionNombreMS")" />
                 @*<span asp-validation-for="Nombre" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 @*<label asp-for="Version" class="control-label"></label>*@
-                <input asp-for="Version" class="form-control" type="hidden" />
+                <input asp-for="Version" class="form-control" type="hidden"value="@httpContextAccessor.HttpContext.Session.GetString("SessionVersionMS")" />
                 @*<span asp-validation-for="Version" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 @*<label asp-for="Ip" class="control-label"></label>*@
-                <input asp-for="Ip" class="form-control" type="hidden" />
+                <input asp-for="Ip" class="form-control" type="hidden"value="@httpContextAccessor.HttpContext.Session.GetString("SessionIpMS")" />
                 @*<span asp-validation-for="Ip" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 @*<label asp-for="Seccion" class="control-label"></label>*@
-                <input asp-for="Seccion" class="form-control" type="hidden" />
+                <input asp-for="Seccion" class="form-control" type="hidden"value="@httpContextAccessor.HttpContext.Session.GetString("SessionSeccionMS")" />
                 @*<span asp-validation-for="Seccion" class="text-danger"></span>*@
             </div>
             @*<div class="form-group">
-            <label asp-for="Estado" class="control-label"></label>
-            <input asp-for="Estado" class="form-control" />
-            <span asp-validation-for="Estado" class="text-danger"></span>
-        </div>*@
+                    <label asp-for="Estado" class="control-label"></label>
+                    <input asp-for="Estado" class="form-control" />
+                    <span asp-validation-for="Estado" class="text-danger"></span>
+                </div>*@
             <label asp-for="Estado" class="control-label"></label>
             <select class="form-control" id="Estado" name="Estado">
-                <option>True</option>
-                <option>False</option>
+                <option value=True >True</option>
+                <option value="False">False</option>
             </select>
 
 
@@ -55,17 +56,17 @@
 
             <div class="form-group">
                 @*<label asp-for="UltimoCiclo" class="control-label"></label>*@
-                <input asp-for="UltimoCiclo" class="form-control" type="hidden" />
+                <input asp-for="UltimoCiclo" class="form-control" type="hidden"value="@httpContextAccessor.HttpContext.Session.GetString("SessionUltimoCicloMS")" />
                 @*<span asp-validation-for="UltimoCiclo" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 @*<label asp-for="RutaSalida" class="control-label"></label>*@
-                <input asp-for="RutaSalida" class="form-control" type="hidden" />
+                <input asp-for="RutaSalida" class="form-control" type="hidden" value="@httpContextAccessor.HttpContext.Session.GetString("SessionRutaSalidaMS")"/>
                 @*<span asp-validation-for="RutaSalida" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 @*<label asp-for="RutaSalidaPdf" class="control-label"></label>*@
-                <input asp-for="RutaSalidaPdf" class="form-control" type="hidden" />
+                <input asp-for="RutaSalidaPdf" class="form-control" type="hidden"value="@httpContextAccessor.HttpContext.Session.GetString("SessionRutaSalidaPDFMS")" />
                 @*<span asp-validation-for="RutaSalidaPdf" class="text-danger"></span>*@
             </div>
             <div class="form-group">
