--- a/WebResumen/Views/MaestroAutoclaveSup/Index.cshtml
+++ b/WebResumen/Views/MaestroAutoclaveSup/Index.cshtml
@@ -72,11 +72,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.RutaSalidaPdf)
             </td>*@
-            <td>
-                <a class="btn btn-success btn-sm text-white" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
-                @*<a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
-            </td>
+        <td>
+            @*<a class="btn btn-success btn-sm text-white" asp-action="Edit" asp-route-id="@item.Id">Editar</a>*@
+            <a type="button" class="btn btn-success" asp-action="Login" asp-route-id="@item.Id">Edit</a>
+            @*<a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
+        </td>
         </tr>
 }
     </tbody>
