--- a/WebResumen/Views/Parametro/Edit.cshtml
+++ b/WebResumen/Views/Parametro/Edit.cshtml
@@ -3,7 +3,8 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor httpContextAccessor
 <h1>Edit</h1>
 
 <h4>Parametros</h4>
@@ -15,27 +16,27 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="ImpresoraSabiUno" class="control-label"></label>
-                <input asp-for="ImpresoraSabiUno" class="form-control" />
+                <input asp-for="ImpresoraSabiUno" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionImpresoraSabiUno")" />
                 <span asp-validation-for="ImpresoraSabiUno" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ImpresoraSabiDos" class="control-label"></label>
-                <input asp-for="ImpresoraSabiDos" class="form-control" />
+                <input asp-for="ImpresoraSabiDos" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionImpresoraSabiDos")"/>
                 <span asp-validation-for="ImpresoraSabiDos" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="RutaLog" class="control-label"></label>
-                <input asp-for="RutaLog" class="form-control" />
+                <input asp-for="RutaLog" class="form-control"value="@httpContextAccessor.HttpContext.Session.GetString("SessionRutaLog")" />
                 <span asp-validation-for="RutaLog" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Tiempo" class="control-label"></label>
-                <input asp-for="Tiempo" class="form-control" />
+                <input asp-for="Tiempo" class="form-control"value="@httpContextAccessor.HttpContext.Session.GetInt32("SessionTiempo")" />
                 <span asp-validation-for="Tiempo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Reinicio" class="control-label"></label>
-                <input asp-for="Reinicio" class="form-control" />
+                <input asp-for="Reinicio" class="form-control"value=true />
                 <span asp-validation-for="Reinicio" class="text-danger"></span>
             </div>
             <div class="form-group">
