--- a/WebResumen/Views/Parametro/Index.cshtml
+++ b/WebResumen/Views/Parametro/Index.cshtml
@@ -49,10 +49,11 @@
                 @Html.DisplayFor(modelItem => item.Reinicio)
             </td>
             <td>
-                <a class="btn btn-success btn-sm text-white" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                @*<a class="btn btn-success btn-sm text-white" asp-action="Edit" asp-route-id="@item.Id">Editar</a>*@
+                <a type="button" class="btn btn-success" asp-action="Login" asp-route-id="@item.Id">Edit</a>
                 @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
+        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
             </td>
         </tr>
 }
