Se añade AudiTrailApp, se modifican css de tablas y se añade css, se agrega columnas visibles para seleccion exportacion

--- a/WebResumen/Views/AudiTrail/Index.cshtml
+++ b/WebResumen/Views/AudiTrail/Index.cshtml
@@ -1,47 +1,98 @@
 ﻿@model IEnumerable<WebResumen.Models.AudiTrail>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "AudiTrail";
 }
 
 <h1>AudiTrail</h1>
 
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Usuario)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Tabla)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaHora)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Evento)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Campo)
-            </th>
-            <th>
-                   ValorAntiguo
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ValorActualizado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Comentario)
-            </th>
-            @*<th>
-            @Html.DisplayNameFor(model => model.Tiempo)
-        </th>*@
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
+<style>
+    .fullscreen-spinner {
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 100000;
+        background: #FFFFFF;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
+
+@*<div class="fullscreen-spinner" ng-show="loading">
+        <img src="~/img/spinner.gif" alt="spinner logo" />
+    </div>*@
+
+
+
+
+<body ng-app="datatablesAudiTrailApp" ng-controller="audiTrailCtrl">
+
+    @*<input type="search" class="form-control"
+               ng-model="searchText"
+               ng-change="searchTable()" />
+
+        <input type="search" class="form-control"
+               ng-model="searchText"
+               ng-change="searchTable()" />*@
+
+    <table id="example" datatable class=" table table-striped table-bordered table-sm  "
+           dt-options="dtOptions"
+           dt-columns="dtColumns"
+           dt-instance="dtInstance">
+        <thead class="thead-dark">
+            </thead>
+
+    </table>
+
+
+
+
+
+</body>
+
+@*<div style="height: 600px; overflow: auto;">
+    <table class="table table-bordered table-responsive-sm table-striped ">
+        <thead class="thead-dark">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Usuario)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Tabla)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FechaHora)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Evento)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Campo)
+                </th>
+                <th>
+                    ValorAntiguo
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ValorActualizado)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Comentario)
+                </th>
+<th>
+        @Html.DisplayNameFor(model => model.Tiempo)
+    </th>
+<th></th>
+    </tr>
+</thead>
+<tbody>
+    @foreach (var item in Model)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Usuario)
@@ -67,11 +118,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Comentario)
             </td>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.Tiempo)
-            </td>*@
-           
-        </tr>
-}
-    </tbody>
-</table>
+                    <td>
+    @Html.DisplayFor(modelItem => item.Tiempo)
+</td>
+
+</tr>
+            }
+        </tbody>
+    </table>
+</div>*@
