--- a/WebResumen/Views/Parametro/Index.cshtml
+++ b/WebResumen/Views/Parametro/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<WebResumen.Models.Parametros>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Parametros de Configuración";
 }
 
 <h1>Parametros de Configuración</h1>
@@ -9,8 +9,8 @@
 @*<p>
     <a asp-action="Create">Create New</a>
 </p>*@
-<table class="table">
-    <thead>
+<table class="table table-sm">
+    <thead class="thead-dark">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.ImpresoraSabiUno)
@@ -27,7 +27,10 @@
             <th>
                 @Html.DisplayNameFor(model => model.Reinicio)
             </th>
-            <th></th>
+            <th>
+                Acciones
+            </th>
+            
         </tr>
     </thead>
     <tbody>
@@ -50,7 +53,7 @@
             </td>
             <td>
                 @*<a class="btn btn-success btn-sm text-white" asp-action="Edit" asp-route-id="@item.Id">Editar</a>*@
-                <a type="button" class="btn btn-success" asp-action="Login" asp-route-id="@item.Id">Edit</a>
+                <a type="button" class="btn btn-success btn-sm" asp-action="Login" asp-route-id="@item.Id">Edit</a>
                 @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
         <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
         <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
