--- a/WebResumen/Views/Shared/_Layout.cshtml
+++ b/WebResumen/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/examplec.css" />
-    <link rel="stylesheet" href="~/css/tablap.css" />
+   
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <!-- Bootstrap core CSS -->
@@ -18,11 +18,16 @@
     <link href="~/lib/MDB/css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="~/lib/MDB/css/style.css" rel="stylesheet">
-    <link href="~/css/toaster.css" rel="stylesheet">
+   
 
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.dataTables.min.css">
 
- 
+    <!-- Colvis -->
+    @*<link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.9.4/css/jquery.dataTables.css" />*@
+
+    <link rel="stylesheet" href="https://rawgithub.com/DataTables/ColVis/master/css/dataTables.colVis.css">
+
+
 
 
 
@@ -72,8 +77,8 @@
 
 
                             @*<li class="nav-item">
-             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            </li>*@
+                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                                </li>*@
                             else
                             {
 
@@ -123,8 +128,8 @@
                 </li>
                 <li class="nav-item">
                     @*<p class="float-right navbar-text navbar-right text-danger">Hola, <strong>@User.Identity.Name.Replace("GLOBAL\\", "")!</strong> </p>*@
-                                     
-                   
+
+
                     @inject IHttpContextAccessor httpContextAccessor
                     <p class=" navbar-text text-danger">Hola, <strong> @httpContextAccessor.HttpContext.Session.GetString("SessionUser")!</strong> </p>
                 </li>
@@ -150,7 +155,6 @@
             &copy; 2020 Copyright - <a asp-area="" asp-controller="Home" asp-action="Privacy">Baxter</a>
         </div>
         <!-- Copyright -->
-
     </footer>
     <!--<footer class="border-top footer text-muted footer-copyright text-center py-3 ">-->
     @*&copy; 2020 - WebResumen - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
@@ -174,22 +178,16 @@
 
     <script type="text/javascript" src="~/lib/MDB/js/addons/datatables.min.js"></script>
     <script type="text/javascript" src="~/lib/DataTables/datatables.min.js"></script>
+    <!-- Angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    @*<script type="text/javascript" src="~/lib/AngularJS/angular.min.js"></script>
-        <script type="text/javascript" src="~/lib/AngularJS/angular-animate.min.js"></script>
-        <script type="text/javascript" src="~/lib/AngularJS/angular-sanitize.min.js"></script>
-        <script type="text/javascript" src="~/lib/AngularJS/toaster.min.js"></script>*@
 
-
-
-
-
-
-
+    <!-- Datatable -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-datatables/0.6.4/angular-datatables.js"></script>
-
-
     <script src="https://cdn.datatables.net/buttons/1.2.4/js/dataTables.buttons.min.js"></script>
+    <!-- Colvis -->
+    <script src="https://rawgithub.com/DataTables/ColVis/master/js/dataTables.colVis.js"></script>
+    <script src="https://rawgithub.com/l-lin/angular-datatables/v0.6.2/dist/plugins/colvis/angular-datatables.colvis.js"></script>
+    @*<script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.colVis.min.js"></script>*@
     <script src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.colVis.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.flash.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.html5.min.js"></script>
@@ -198,39 +196,25 @@
 
 
 
-
-    @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>*@
+    <!-- Excel-PDF-Copy -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.18/pdfmake.min.js"></script>
     <script src="https://cdn.datatables.net/colreorder/1.5.3/js/dataTables.colReorder.min.js"></script>
 
 
-    <!-- Toaster -->
-
-
-
-
-
-
-
-
-
-
+    <!-- Interno -->
 
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/example.js" asp-append-version="true"></script>
-    @*<script src="~/js/Agua.js" asp-append-version="true"></script>*@
-    @*<script src="~/js/ajax.js" asp-append-version="true"></script>*@
     <script src="~/js/homeApp.js" asp-append-version="true"></script>
     <script src="~/js/vaporApp.js" asp-append-version="true"></script>
     <script src="~/js/aguaApp.js" asp-append-version="true"></script>
-    <script src="~/js/maestroApp.js" asp-append-version="true"></script>
-    <script src="~/js/pruebaApp.js" asp-append-version="true"></script>
+    <script src="~/js/AudiTrailApp.js" asp-append-version="true"></script>
 
-    <script src="~/AngularJSApp/AutoClaveA/Module.js" asp-append-version="true"></script>
-    <script src="~/AngularJSApp/AutoClaveA/Controller.js" asp-append-version="true"></script>
-    <script src="~/AngularJSApp/AutoClaveA/Service.js" asp-append-version="true"></script>
+
+
+    <script src="~/js/AngularJSApp/AutoClaveA/Module.js" asp-append-version="true"></script>
+    <script src="~/js/AngularJSApp/AutoClaveA/Controller.js" asp-append-version="true"></script>
+    <script src="~/js/AngularJSApp/AutoClaveA/Service.js" asp-append-version="true"></script>
 
 
 
