--- a/WebResumen/Views/CiclosAutoClaveVapor/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoClaveVapor/Index.cshtml
@@ -6,9 +6,11 @@
 
 
 <body ng-app="datatablesVaporApp" ng-controller="vaporCtrl">
-    <table datatable class="cell-border thead-dark table table-striped table-bordered"
+    <table datatable class=" table table-striped table-bordered table-sm"
            dt-options="dtOptions"
            dt-columns="dtColumns">
+        <thead class="thead-dark">
+        </thead>
     </table>
 </body>
 
