--- a/WebResumen/Views/MaestroAutoclaveSup/Edit.cshtml
+++ b/WebResumen/Views/MaestroAutoclaveSup/Edit.cshtml
@@ -76,9 +76,9 @@
     </div>
 </div>
 
-<div>
+@*<div>
     <a asp-action="Index">Volver</a>
-</div>
+</div>*@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
