--- a/WebResumen/Views/MaestroAutoclaveSup/Index.cshtml
+++ b/WebResumen/Views/MaestroAutoclaveSup/Index.cshtml
@@ -7,78 +7,84 @@
 <h1>Estado AutoClaves</h1>
 
 @*<p>
-    <a asp-action="Create">Create New</a>
-</p>*@
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Matricula)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Nombre)
-            </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.Version)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Ip)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Seccion)
-            </th>*@
-            <th>
-                @Html.DisplayNameFor(model => model.Estado)
-            </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.UltimoCiclo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RutaSalida)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RutaSalidaPdf)
-            </th>*@
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Matricula)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.Version)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Ip)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Seccion)
-            </td>*@
-            <td>
-                @Html.DisplayFor(modelItem => item.Estado)
-            </td>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.UltimoCiclo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RutaSalida)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RutaSalidaPdf)
-            </td>*@
-        <td>
-            @*<a class="btn btn-success btn-sm text-white" asp-action="Edit" asp-route-id="@item.Id">Editar</a>*@
-            <a type="button" class="btn btn-success" asp-action="Login" asp-route-id="@item.Id">Edit</a>
-            @*<a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
-        </td>
-        </tr>
-}
-    </tbody>
-</table>
+        <a asp-action="Create">Create New</a>
+    </p>*@
+<div style="height: 500px; overflow: auto;">
+    <table class="table table-sm">
+        <thead class="thead-dark">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Matricula)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nombre)
+                </th>
+                @*<th>
+                        @Html.DisplayNameFor(model => model.Version)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Ip)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Seccion)
+                    </th>*@
+                <th>
+                    @Html.DisplayNameFor(model => model.Estado)
+                </th>
+                <th>
+                    Acciones
+                </th>
+                @*<th>
+                        @Html.DisplayNameFor(model => model.UltimoCiclo)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.RutaSalida)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.RutaSalidaPdf)
+                    </th>*@
+
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Matricula)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nombre)
+                    </td>
+                    @*<td>
+                            @Html.DisplayFor(modelItem => item.Version)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Ip)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Seccion)
+                        </td>*@
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Estado)
+                    </td>
+                    @*<td>
+                            @Html.DisplayFor(modelItem => item.UltimoCiclo)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.RutaSalida)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.RutaSalidaPdf)
+                        </td>*@
+                    <td>
+                        @*<a class="btn btn-success btn-sm text-white" asp-action="Edit" asp-route-id="@item.Id">Editar</a>*@
+                        <a type="button" class="btn btn-success btn-sm" asp-action="Login" asp-route-id="@item.Id">Edit</a>
+                        @*<a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
